--- a/Salaries_histogram.ipynb
+++ b/Salaries_histogram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "d869db47-ce93-4ab2-a1e5-4c9c55fdff62",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "0f931c37-f5db-44b5-8ecb-143989e7d1e0",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "6904113f-58c5-44d3-b9f0-093d3041e324",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "a1f5e3a1-719e-4b43-9703-33ae7dc07a47",
    "metadata": {},
    "outputs": [
@@ -59,20 +59,20 @@
        "Name: salary, Length: 300024, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salaries_data = pd.read_sql(\"SELECT * FROM salaries\", connection)\n",
-    "del salaries_data['emp_no']\n",
+    "salaries_data = pd.read_sql(\"SELECT Salary FROM salaries\", connection)\n",
+    "\n",
     "pd.to_numeric(salaries_data.salary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "0a85ddbd-97bd-4095-9110-d378983eae8c",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,7 +110,9 @@
    "id": "f70a00ea-575e-486a-ab19-1bcb370b5c13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "salary_averages = pd.read_sql(\"SELECT Salary FROM salaries\", connection)"
+   ]
   },
   {
    "cell_type": "code",
